BP-1114: fix crore circle display on small devices

--- a/app/blocks/b-mark/b-mark.scss
+++ b/app/blocks/b-mark/b-mark.scss
@@ -200,7 +200,8 @@
     }
 
     .b-mark_inline.b-mark_size_l .b-mark__circle,
-    .b-mark_inline.b-mark_size_s .b-mark__circle {
+    .b-mark_inline.b-mark_size_s .b-mark__circle,
+    .b-mark_inline.b-mark_size_xs .b-mark__circle{
         display: inline-block;
     }
 }
